--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "pwa-msedge",
             "request": "launch",
             "name": "Open index.html",
-            "file": "c:\\Users\\micha\\Strona\\index.html"
+            "file": "c:\\Users\\micha\\Strona\\misiekii123.github.io\\index.html"
         }
     ]
 }
