--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,12 @@
     // Aby uzyskać więcej informacji, odwiedź stronę: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "type": "pwa-msedge",
             "request": "launch",
             "name": "Open index.html",
-            "file": "c:\\Users\\micha\\Strona\\misiekii123.github.io\\index.html"
+            "file": "/home/michal/GitHub/misiekii123.github.io/index.html"
         }
     ]
 }
